[package]
name = "report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
boon = "0.5.1"
hyper = { version = "0.14.27", features = ["full"] }
jsonschema = "0.17.1"
quick-xml = { version = "0.30.0", features = [
  "serde",
  "serialize",
  "async-tokio",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
